# dm_finals

./: ARIMA.ipynb  ARIMA_Results.csv  DataWrangling.ipynb  LSTM.ipynb  LSTM_Results.csv  Linear Regression.ipynb  LinearRegression_Results.csv  README.md  actual_jan.csv  requirements.txt  stocks_data.csv
LLM/: LLM.ipynb
LLM/.ipynb_checkpoints/: LLM-checkpoint.ipynb  microsoft_analysis_report-checkpoint.txt
api/: analysis.ipynb  batch_1_data.csv  batch_2_data.csv  batch_3_data.csv  batch_4_data.csv  batch_5_data.csv  batch_6_data.csv  batch_7_data.csv  batch_8_data.csv  client.py  pyproject.toml  test_1.csv  test_2.csv
api/.ipynb_checkpoints/: config-checkpoint.py  testing-checkpoint.py
